--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,8 +66,10 @@ flutter:
 
 
   assets:
-    - "assets/icons/icon.png"
-    - "assets/icons/logo_white.png"
+    - "assets/icons/"
+    # - "assets/icons/icon.png"
+    # - "assets/icons/logo_white.png"
+    # - "assets/icons/logo_gradient.png"
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
