I added so many things without ever committing them that now I honestly have no idea what I did except for maybe the last thing or two. Added the map feature for viewing events, also added the popup marker on the map. Also started implementing the bottomSheet for search parameters input.
Yes this is not the right branch for all of this, I'll take care of it tomorrow.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_fonts: ^2.1.0
   intl: ^0.17.0
   flutter_launcher_icons: ^0.9.1
+  google_maps_flutter: ^2.1.1
+  custom_info_window: ^1.0.1
 
 flutter_icons:
   image_path: "assets/icons/icon.png"
