--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -39,6 +40,9 @@ dependencies:
   flutter_launcher_icons: ^0.9.1
   google_maps_flutter: ^2.1.1
   custom_info_window: ^1.0.1
+
+  http: ^0.13.4
+  geolocator: ^8.0.0
 
 flutter_icons:
   image_path: "assets/icons/icon.png"
