Added dark mode support

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.runwithme">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    <application
         android:label="RunWithMe"
         android:name="${applicationName}"
@@ -35,4 +37,5 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+
 </manifest>
