--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.17.0
   flutter_launcher_icons: ^0.9.1
   google_maps_flutter: ^2.1.1
+  provider: 5.0.0-nullsafety.1 
   custom_info_window: ^1.0.1
 
   http: ^0.13.4
