--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   google_maps_flutter: ^2.1.1
   provider: 5.0.0-nullsafety.1 
   custom_info_window: ^1.0.1
-
+  flutter_google_places: ^0.3.0
   http: ^0.13.4
   geolocator: ^8.0.0
 
