--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^0.13.4
   geolocator: ^8.0.0
   flutter_secure_storage: ^5.0.2
+  uuid: ^3.0.6
 
 flutter_icons:
   image_path: "assets/icons/icon.png"
