--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   uuid: ^3.0.6
   weather: ^2.0.1
+  weather_icons: ^3.0.0
 
 flutter_icons:
   image_path: "assets/icons/icon.png"
