--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   uuid: ^3.0.6
   weather: ^2.0.1
   weather_icons: ^3.0.0
+  mockito: ^5.1.0
 
 flutter_icons:
   image_path: "assets/icons/icon.png"
