--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:icon="@mipmap/ic_launcher">
 
          <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyAIjayoyV5uUd4pCZgGyMttVoZfUo4lKUM"/>
+               android:value="REMOVED"/>
 
         <activity
             android:name=".MainActivity"
